--- a/style.css
+++ b/style.css
@@ -1,26 +1,26 @@
 body {
-    background-color: rgb(253, 251, 251);
-    margin: 0%;
-    font-family: 'Roboto', sans-serif;
+  background-color: rgb(253 , 251 , 251);
+  margin: 0%;
+  font-family: Roboto, sans-serif;
 }
 
 #cabecalho {
-    position: fixed;
-    top: 0px;
-    width: 100%;
-    background-color: #FFB7C3;
-    text-align: center;
-    border-bottom: 2px solid black;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  background-color: #ffb7c3;
+  text-align: center;
+  border-bottom: 2px solid black;
 }
 
-nav ul{
-    display:table;
+nav ul {
+    display: table;
     margin: auto;
     list-style: none;
     justify-content: center;
 }
 
-nav li{
+nav li {
     float: left;
     margin: auto;
     list-style: none;
@@ -28,23 +28,23 @@ nav li{
 }
 
 nav a:link {
-    color:black;
-    font-weight:bolder;
+    color: black;
+    font-weight: 500;
 }
 
 nav a:visited {
-    color:black;
-    font-weight:bolder;
+    color: black;
+    font-weight: 500;
 }
 
 nav a:active {
-    color:black;
-    font-weight:bolder;
+    color: black;
+    font-weight: 500;
 }
 
 nav a:hover {
-    color:black;
-    font-weight:bolder;
+    color: black;
+    font-weight: 500;
 }
 
 #minha_foto {
@@ -61,7 +61,7 @@ table {
 
 #informacoes {
     border: 2px solid black;
-    background-color: #BCF4DE;
+    background-color: #bcf4de;
     margin: auto;
     text-align: center;
     margin-top: 147px;
@@ -69,7 +69,7 @@ table {
 }
 
 #informacoes h3 {
-    background-color: #CDE5D7;
+    background-color: #cde5d7;
 }
 
 .lado-esquerdo {
@@ -79,7 +79,7 @@ table {
     line-height: 20px;
     text-align: center;
     margin-top: 80px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
 }
 
 .lado-direito {
@@ -89,22 +89,21 @@ table {
     line-height: 20px;
     text-align: center;
     margin-top: 80px;
-    margin-bottom: 00px;
-    
+    margin-bottom: 0;
 }
 
 #tabelas {
-    margin: 35% 20% 0% 20%;
+    margin: 35% 20% 0%;
 }
 
 #licoes_a_aprender {
-    margin-top: 0px;
+    margin-top: 0;
     font-size: medium;
     float: left;
 }
 
 #licoes_aprendidas {
-    margin-top: 0px;
+    margin-top: 0;
     font-size: medium;
     float: right;
 }
@@ -113,7 +112,7 @@ table {
     text-align: center;
     font-size: 25px;
     margin-top: 700px;
-    background-color: #8DB8A7;
+    background-color: #8db8a7;
     padding-bottom: 1px;
 }
 
@@ -122,12 +121,12 @@ table {
 }
 
 a {
-    padding: 0px 20px 20px 20px;
+    padding: 0 20px 20px;
     text-decoration: none;
 }
 
 #rodape a:link {
-    color: #FFB7C3;
+    color: #ffb7c3;
 }
 
 #rodape a:visited {
@@ -135,13 +134,13 @@ a {
 }
 
 #rodape a:hover {
-    text-decoration:none;
-    color:white;
+    text-decoration: none;
+    color: white;
 }
 
 #rodape a:active {
-    text-decoration:none;
-    color:green;
+    text-decoration: none;
+    color: green;
 }
 
 #logos-redes-sociais {
@@ -149,5 +148,5 @@ a {
 }
 
 #direitos {
-    font-size:15px;
+    font-size: 15px;
 }
