resolvendo conflitos do codeclimate v4

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ table {
 }
 
 #informacoes h3 {
-  background-color: rgb(205 , 229 , 215)
+  background-color: rgb(205 , 229 , 215);
 }
 
 .lado-esquerdo {
