--- a/style.css
+++ b/style.css
@@ -46,3 +46,16 @@ footer {
 #article_meuaprendizado {
   text-align: center;
 }
+
+table, th, td {
+  border: 1px solid black;
+  border-collapse: collapse;
+}
+
+th, td {
+  padding: 15px;
+}
+
+table {
+  width: 100%;
+}
