--- a/style.css
+++ b/style.css
@@ -59,26 +59,27 @@ nav {
 }
 
 .left-Side {
+    display: inline-block;
     float: left;
     width: 47%;
     line-height: 20px;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .right-Side {
-    display: inline;
+    display: inline-block;
     float: right;
     width: 47%;
     line-height: 20px;
     text-align: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-    margin-left: 50px;
-    margin-right: 50px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 #coments {
