--- a/style.css
+++ b/style.css
@@ -59,7 +59,6 @@ nav {
 }
 
 .left-Side {
-    display: inline-block;
     float: left;
     width: 47%;
     line-height: 20px;
@@ -71,7 +70,6 @@ nav {
 }
 
 .right-Side {
-    display: inline-block;
     float: right;
     width: 47%;
     line-height: 20px;
@@ -80,6 +78,10 @@ nav {
     margin-bottom: 10px;
     margin-left: 10px;
     margin-right: 10px;
+}
+
+.center-Inline {
+    display: inline;
 }
 
 #coments {
