--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(253, 251, 251);
+  background-color: rgb(253,251,251);
   margin: 0%;
   font-family: Roboto, sans-serif;
 }
@@ -53,7 +53,7 @@ nav a:hover {
   font-weight: 500;
   text-decoration: none;
   padding: 0 20px 20px;
- }
+}
 
 #minha_foto {
   border-radius: 300px;
@@ -69,20 +69,20 @@ table {
 
 #informacoes {
   border: 2px solid black;
-  background-color: rgb(188, 244 , 222);
+  background-color: rgb(188,244,222);
   margin: auto;
   text-align: center;
   margin-top: 147px;
 }
 
 #informacoes h3 {
-  background-color: rgb(205 , 229 , 215);
+  background-color: rgb(205,229,215);
 }
 
 .lado-esquerdo {
   float: left;
   width: 47%;
-  color: rgb(001, 002, 003);
+  color: rgb(001,002,003);
   line-height: 20px;
   text-align: center;
   margin: 10px;
@@ -91,7 +91,7 @@ table {
 .lado-direito {
   float: right;
   width: 47%;
-  color: rgb(001, 002, 003);
+  color: rgb(001,002,003);
   line-height: 20px;
   text-align: center;
   margin: 10px;
@@ -117,7 +117,7 @@ table {
   text-align: center;
   font-size: 25px;
   margin-top: 700px;
-  background-color: rgb(141, 184, 167);
+  background-color: rgb(141,184,167);
   padding-bottom: 1px;
 }
 
